--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,10 @@
 
   {% include head.html %}
 
-  <body>
+  <body style="background-image: url(https://static.pexels.com/photos/412681/pexels-photo-412681.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;">
     {{ content }}
     {% include footer.html %}
 
