--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,7 @@
 
   {% include head.html %}
 
-  <body style="background-image: url(https://static.pexels.com/photos/412681/pexels-photo-412681.jpeg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;">
+  <body>
     {{ content }}
     {% include footer.html %}
 
