--- a/_includes/theme-home-builtin-1.html
+++ b/_includes/theme-home-builtin-1.html
@@ -7,7 +7,7 @@
 
 <div class="home-video">
   <iframe frameborder="0" height="100%" width="100%" 
-    src="https://youtube.com/embed/4dPyx-qrF0w?mute=1&start=8&autoplay=1&controls=0&showinfo=0&autohide=1&loop=1&playlist=4dPyx-qrF0w"start=8&>
+    src="https://youtube.com/embed/4dPyx-qrF0w?mute=1&start=8&end=238&autoplay=1&controls=0&showinfo=0&autohide=1&loop=1&playlist=4dPyx-qrF0w"start=8&>
   </iframe>
 </div>
 
